app-helloworld-testprune/service-hello-openshift.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: helloworld
  name: hello-openshift
  namespace: helloworld
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-openshift
  sessionAffinity: None
  type: ClusterIP
