app-helloworld-testprune/route-testprune.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: helloworld
  name: testprune
  namespace: helloworld
spec:
  host: testprune.apps.lab01.gpslab.club
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello-openshift
    weight: 100
  wildcardPolicy: None
